# c-talk

./: .commitlintrc.cjs  .editorconfig  .env  .eslintcache  .eslintignore  .eslintrc.cjs  .gitignore  .lintstagedrc.js  .stylelintrc.cjs  README.md  components.json  env.ts  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  postcss.config.cts  renovate.json  tsconfig.json  tsconfig.node.json  uno.config.ts  unocss.config.ts  vite.config.ts  vitest.config.ts  wdio.conf.ts
.github/workflows/: ci.yml
.husky/: pre-commit
backend/: .gitignore  Cargo.toml
backend/server/: Cargo.toml
backend/server/src/: lib.rs  router.rs
backend/shared/: Cargo.toml
backend/shared/src/: lib.rs
backend/shared/src/toc/: encoding.rs  error.rs  mod.rs
backend/shared/src/types/: mod.rs
backend/tauri/: Cargo.toml  tauri.conf.json
backend/tauri/icons/: icon.icns
backend/tauri/src/: logging.rs  macros.rs  main.rs
backend/tauri/src/commands/: mod.rs
src/: App.tsx  auto-imports.d.ts  components.d.ts  main.ts  main.tsx  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/command/: app.rs
src-tauri/src/shared/toc/: encoding.rs  tests.rs
src/components/: Greet.vue  fancy-box.tsx  page.tsx  socket-io-indicator.tsx  tailwind-indicator.tsx
src/components/dashboard/: chat-list.tsx  chat-viewer.module.scss  chat-viewer.tsx
src/components/home/: change-password-dialog.tsx  chat-list-alert-dialog.tsx  chat-list.module.scss  chat-list.module.scss.d.ts  chat-list.tsx  chat-viewer.module.scss  chat-viewer.module.scss.d.ts  chat-viewer.tsx  group-create-dialog.tsx  group-item.tsx  group-list-viewer.tsx  group-profile-dialog.tsx  layout.module.scss  layout.module.scss.d.ts  layout.tsx  profile-dialog.tsx  search-dialog.module.scss  search-dialog.module.scss.d.ts  search-dialog.tsx  sticker-popover.tsx  upload-image-confirm-dialog.tsx  user-item.tsx
src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  input.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  slider.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  toast.tsx  toggle-group.tsx  toggle.tsx
src/hooks/: README.md  ofetch.tsx  socket-io.tsx  use-notification.tsx  useGlobalMutation.ts  websocket.tsx
src/hooks/apis/: chat.ts  resource.ts  shared.ts  users.ts
src/hooks/apis/chat/: friends.ts  group.ts  index.ts  sync.ts
src/layouts/: default.vue
src/layouts/common/: DefaultFooter.vue  DefaultHeader.vue
src/layouts/common/components/: HeaderElement.vue
src/libs/: cmds.ts  dayjs.ts  i18n.ts
src/pages/: _app.tsx  about.vue  default.vue  index.vue  main.vue
src/pages/(auth)/: _layout.tsx  index.tsx  register.tsx
src/pages/(index)/: index.tsx
src/pages/dashboard/(main)/: index.tsx
src/pages/main/(main)/: _layout.tsx  index.tsx
src/stores/: README.md  home.tsx  socket-io.ts  user.ts
src/styles/: global.scss  main.scss
src/types/: auto-imports.d.ts  globals.d.ts  globals.ts  vite-env.d.ts
src/typings/: auto-imports.d.ts  components.d.ts  env.d.ts
src/utils/: README.md  env.tsx  url.ts
src/utils/validation/: README.md
tests/e2e/: hello.e2e.ts
tests/pageobjects/: login.page.ts  page.ts  secure.page.ts
tests/specs/: test.e2e.ts
