[package]
name = "wbook"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0.50"
anyhow = "1.0.75"
config = "0.13.3"
encoding_rs = "0.8.33"
epub-builder = "0.7.4"
send-to-kindle = "1.0.1"
slab = "0.4.9"
simd-json = "0.13.4"
tera = "1.19.1"
chrono = "0.4.31"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
axum = "0.6.20"

[dependencies.uuid]
version = "1.5.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
