[package]
name = "shared"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4.9"
encoding_rs = "0.8.33"
epub-builder = "0.7.4"
send-to-kindle = "1.0.1"
tera = "1.19.1"
rocksdb = "0.21.0"

# workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
